# handshake-prompt

./: .gitignore  README.md  SPEC.md
.github/workflows/: publish-npm.yml  publish-pypi-agent.yml  publish-pypi-server.yml
docs/: ci-secrets.md  comparison.md  threat-model.md
examples/oa-expense-report/: README.md  app.py
examples/server-flask/: README.md  app.py  requirements.txt
examples/server-flask/templates/: index.html
libs/agent-python/: LICENSE  README.md  pyproject.toml
libs/agent-python/handshake_prompt_agent/: __init__.py  __main__.py  client.py
libs/js/: README.md  package-lock.json  package.json  tsconfig.json
libs/js/src/: client.ts  index.ts  prompt.ts
libs/python/: README.md  pyproject.toml
libs/python/handshake_prompt/: __init__.py  auth.py  manager.py  prompt.py  protocol.py  session.py  store.py
libs/python/handshake_prompt/modes/: __init__.py  form_fill.py  generic.py
