[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "handshake-prompt-agent"
version         = "0.1.0"
description     = "Agent-side SDK + CLI for the Handshake Prompt Protocol"
readme          = "README.md"
requires-python = ">=3.8"
license         = { text = "MIT" }
keywords        = ["ai", "agent", "llm", "handshake", "protocol", "cli"]
authors         = [{ name = "handshake-prompt contributors" }]
classifiers     = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# No external dependencies - uses stdlib only.
dependencies = []

[project.urls]
Homepage   = "https://github.com/CGandGameEngineLearner/handshake-prompt"
Repository = "https://github.com/CGandGameEngineLearner/handshake-prompt"

[project.scripts]
handshake-prompt-agent = "handshake_prompt_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["handshake_prompt_agent*"]
