[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "handshake-prompt"
version         = "0.2.1"
description     = "Handshake Prompt Protocol - session pairing and token auth for AI Agent access"
readme          = "README.md"
requires-python = ">=3.8"
license         = { text = "MIT" }
keywords        = ["ai", "agent", "protocol", "websocket", "handshake", "llm", "automation"]
authors         = [{ name = "handshake-prompt contributors" }]
classifiers     = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "flask>=2.0,<3",
    "flask-sock>=0.7.0",
]

[project.urls]
Homepage   = "https://github.com/CGandGameEngineLearner/handshake-prompt"
Repository = "https://github.com/CGandGameEngineLearner/handshake-prompt"
Issues     = "https://github.com/CGandGameEngineLearner/handshake-prompt/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-flask>=1.3",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["handshake_prompt*"]
